k8s/homepage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: default
  labels:
    app: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
